feat: updates collector configs and compliance attributes
